--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #server port
 server.port=8203
+
 #mongodb
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
@@ -7,4 +8,5 @@ spring.data.mongodb.database=trainee
 
 #logging
 logging.level.org.springframework.data=debug
-logging.level.=error
+logging.level.root=INFO
+logging.level.uk.nhs.hee.trainee.details=TRACE
