--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.2.2.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
+    id 'application'
 }
 
 group = 'uk.nhs.hee.trainee.details'
@@ -36,6 +37,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
 
     compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.1-api', version: '1.0.2.Final'
+    //swagger
+    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     testCompile group: 'junit', name: 'junit', version: '4.10'
 }
 
@@ -43,3 +47,4 @@ test {
 	useJUnitPlatform()
 }
 
+mainClassName = 'uk.nhs.hee.trainee.details.TisTraineeDetailsApplication'
