--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,10 @@ dependencies {
     compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
     compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     testCompile group: 'junit', name: 'junit', version: '4.10'
+    //testCompile group: 'org.springframework', name: 'spring-test', version: '4.0.5.RELEASE'
+    //testCompile group: 'org.springframework', name: 'spring-test', version: '5.2.2.RELEASE'
+
+
 }
 
 test {
