--- a/build.gradle
+++ b/build.gradle
@@ -1,64 +1,46 @@
 plugins {
-	id 'org.springframework.boot' version '2.2.2.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-	id 'java'
-    id 'application'
-    id 'net.ltgt.apt' version '0.20'
+  id "java"
+  id "org.springframework.boot" version "2.2.2.RELEASE"
+  id "io.spring.dependency-management" version "1.0.8.RELEASE"
+  // TODO: check if required, can be achieved with config but may not be better.
+  id "net.ltgt.apt" version "0.20"
 }
 
-group = 'uk.nhs.hee.trainee.details'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+group = "uk.nhs.hee.trainee.details"
+version = "0.0.1-SNAPSHOT"
+sourceCompatibility = "11"
 
 configurations {
-    developmentOnly
-    runtimeClasspath {
-        extendsFrom developmentOnly
-    }
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
+  compileOnly {
+    extendsFrom annotationProcessor
+  }
 }
 
 repositories {
-	mavenCentral()
-}
-
-ext {
-    mapstructVersion = "1.3.1.Final"
+  mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
-    //logging
-	compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.29'
-    //lombok
-    compileOnly 'org.projectlombok:lombok:1.18.10'
-    annotationProcessor 'org.projectlombok:lombok:1.18.10'
+  // Spring Boot
+  implementation "org.springframework.boot:spring-boot-starter"
+  implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
+  implementation "org.springframework.boot:spring-boot-starter-web"
+  testImplementation "org.springframework.boot:spring-boot-starter-test"
 
-    //mapstruct
-    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
-    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
-    testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+  // Lombok
+  compileOnly "org.projectlombok:lombok:1.18.10"
+  annotationProcessor "org.projectlombok:lombok:1.18.10"
 
-    compile group: 'org.hibernate.javax.persistence', name: 'hibernate-jpa-2.1-api', version: '1.0.2.Final'
-    //swagger
-    compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-    testCompile group: 'junit', name: 'junit', version: '4.10'
-    //testCompile group: 'org.springframework', name: 'spring-test', version: '4.0.5.RELEASE'
-    //testCompile group: 'org.springframework', name: 'spring-test', version: '5.2.2.RELEASE'
+  // Mapstruct
+  implementation "org.mapstruct:mapstruct:1.3.1.Final"
+  annotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
+  testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.3.1.Final"
 
-
+  // Swagger
+  implementation "io.springfox:springfox-swagger2:2.9.2"
+  implementation "io.springfox:springfox-swagger-ui:2.9.2"
 }
 
 test {
-	useJUnitPlatform()
+  useJUnitPlatform()
 }
-
-mainClassName = 'uk.nhs.hee.trainee.details.TisTraineeDetailsApplication'
