--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,6 @@ repositories {
 
 dependencies {
   // Spring Boot
-  implementation "org.springframework.boot:spring-boot-starter"
   implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
   implementation "org.springframework.boot:spring-boot-starter-web"
   testImplementation "org.springframework.boot:spring-boot-starter-test"
@@ -47,6 +46,8 @@ dependencies {
 checkstyle {
   toolVersion = "8.26"
   config = resources.text.fromArchiveEntry(configurations.checkstyle[0], 'google_checks.xml')
+  maxErrors = 0
+  maxWarnings = 0
 }
 
 test {
