--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
 
   // Code Quality
   id "checkstyle"
+  id "org.sonarqube" version "2.8"
 }
 
 group = "uk.nhs.hee.trainee.details"
@@ -48,6 +49,15 @@ checkstyle {
   config = resources.text.fromArchiveEntry(configurations.checkstyle[0], 'google_checks.xml')
   maxErrors = 0
   maxWarnings = 0
+}
+
+sonarqube {
+  properties {
+    property "sonar.host.url", "https://sonarcloud.io"
+    property "sonar.login", System.getenv("SONAR_TOKEN")
+    property "sonar.organization", "health-education-england"
+    property "sonar.projectKey", "Health-Education-England_TIS-TRAINEE-DETAILS"
+  }
 }
 
 test {
