--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
 
   // Code Quality
   id "checkstyle"
+  id "jacoco"
   id "org.sonarqube" version "2.8"
 }
 
@@ -51,6 +52,12 @@ checkstyle {
   maxWarnings = 0
 }
 
+jacocoTestReport {
+  reports {
+    xml.enabled true
+  }
+}
+
 sonarqube {
   properties {
     property "sonar.host.url", "https://sonarcloud.io"
@@ -61,5 +68,6 @@ sonarqube {
 }
 
 test {
+  finalizedBy jacocoTestReport
   useJUnitPlatform()
 }
