--- a/.github/workflows/analyze-with-sonarqube.yml
+++ b/.github/workflows/analyze-with-sonarqube.yml
@@ -15,6 +15,8 @@ jobs:
           java-version: 11
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+      - name: Run Checks
+        run: ./gradlew check
       - name: Run SonarQube
         run: ./gradlew sonarqube
         env:
