chore: Create Dockerfile
Create a Dockerfile with basic configuration for building a docker image
from the built jar.
Update application.properties to allow the database connection details
to be provided to the image at runtime.

TISNEW-3848

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 #server port
 server.port=8203
 #mongodb
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=trainee
+spring.data.mongodb.host=${DB_HOST:localhost}
+spring.data.mongodb.port=${DB_PORT:27017}
+spring.data.mongodb.database=${DB_NAME:trainee}
+spring.data.mongodb.user=${DB_USER:''}
+spring.data.mongodb.password=${DB_PASSWORD:''}
 #logging
 logging.level.org.springframework.data=debug
 logging.level.root=INFO
