--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 group = "uk.nhs.hee.trainee.details"
-version = "0.0.1-SNAPSHOT"
+version = "0.0.2"
 sourceCompatibility = "11"
 
 configurations {
