--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
           echo "::set-output name=image-uri::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
       - name: Write image uri
-        run: ${{ steps.build-image.outputs.image-uri }} > image-uri.txt
+        run: echo ${{ steps.build-image.outputs.image-uri }} > image-uri.txt
 
       - name: Upload image uri
         uses: actions/upload-artifact@v1
@@ -87,11 +87,12 @@ jobs:
         uses: actions/download-artifact@v1
         with:
           name: image-uri
+          path: ./
 
       - name: Read image uri
         id: read-image-uri
-        run:
-          image-uri = `cat image-uri.txt`
+        run: |
+          image-uri=`cat image-uri.txt`
           echo "::set-output name=image-uri::$image-uri"
 
       - name: Fill in the new image ID in the Amazon ECS task definition
