--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
           echo "::set-output name=image-uri::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
       - name: Write image uri
-        run: ${{ steps.build-image.outputs.image-uri }} > image-uri.txt
+        run: echo ${{ steps.build-image.outputs.image-uri }} > image-uri.txt
 
       - name: Upload image uri
         uses: actions/upload-artifact@v1
