chore: Change deploy to use trainee-ui cluster
TISNEW-3848

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -115,5 +115,5 @@ jobs:
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
           service: ${{ github.event.repository.name }}
-          cluster: ${{ github.event.repository.name }}
+          cluster: trainee-ui-fargate
           wait-for-service-stability: true
