--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Download build artifact
-        uses: actions/download-artifact@v2-preview
+        uses: actions/download-artifact@v1
         with:
           name: app-jar
           path: build/libs
