--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -1,13 +1,10 @@
-name: Deploy
+name: CI/CD Workflow
 
-on:
-  push:
-    branches:
-      - master
+on: push
 
 jobs:
-  build:
-    name: Build
+  assemble:
+    name: Assemble JAR
     runs-on: ubuntu-latest
 
     steps:
@@ -20,7 +17,7 @@ jobs:
           java-version: 11
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew assemble
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v2-preview
@@ -28,10 +25,33 @@ jobs:
           name: app-jar
           path: build/libs/*.jar
 
+  analyze:
+    name: Perform quality analysis
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
+      - name: Run checks
+        run: ./gradlew check
+
+      - name: Run quality analysis
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: ./gradlew sonarqube
+
   dockerize:
     name: Dockerize
-    needs: build
+    needs: [assemble, analyze]
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
