--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -25,13 +25,64 @@ jobs:
           name: app-jar
           path: build/libs/*.jar
 
+  check:
+    name: Perform checks
+    runs-on: ubuntu-latest
+
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+
+        - name: Set up JDK 11
+          uses: actions/setup-java@v1
+          with:
+            java-version: 11
+
+        - name: Run Gradle checks
+          run: ./gradlew check -x test
+
+        - name: Upload build artifact
+          uses: actions/upload-artifact@v2-preview
+          with:
+            name: reports
+            path: build/reports
+
+  test:
+    name: Run automated tests
+    runs-on: ubuntu-latest
+
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v2
+
+        - name: Set up JDK 11
+          uses: actions/setup-java@v1
+          with:
+            java-version: 11
+
+        - name: Run Gradle tests
+          run: ./gradlew test
+
+        - name: Upload build artifact
+          uses: actions/upload-artifact@v2-preview
+          with:
+            name: reports
+            path: build/reports
+
   analyze:
     name: Perform quality analysis
+    needs: [check, test]
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Download build artifact
+        uses: actions/download-artifact@v1
+        with:
+          name: reports
+          path: build/reports
 
       - name: Set up JDK 11
         uses: actions/setup-java@v1
