--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -29,45 +29,45 @@ jobs:
     name: Perform checks
     runs-on: ubuntu-latest
 
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v2
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-        - name: Set up JDK 11
-          uses: actions/setup-java@v1
-          with:
-            java-version: 11
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
 
-        - name: Run Gradle checks
-          run: ./gradlew check -x test
+      - name: Run Gradle checks
+        run: ./gradlew check -x test
 
-        - name: Upload build artifact
-          uses: actions/upload-artifact@v2-preview
-          with:
-            name: reports
-            path: build/reports
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v2-preview
+        with:
+          name: reports
+          path: build/reports
 
   test:
     name: Run automated tests
     runs-on: ubuntu-latest
 
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v2
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-        - name: Set up JDK 11
-          uses: actions/setup-java@v1
-          with:
-            java-version: 11
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
 
-        - name: Run Gradle tests
-          run: ./gradlew test
+      - name: Run Gradle tests
+        run: ./gradlew test
 
-        - name: Upload build artifact
-          uses: actions/upload-artifact@v2-preview
-          with:
-            name: reports
-            path: build/reports
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v2-preview
+        with:
+          name: reports
+          path: build/reports
 
   analyze:
     name: Perform quality analysis
@@ -130,7 +130,7 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ github.event.repository.name }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha::7 }} -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }} -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY
 
   deploy:
@@ -159,7 +159,7 @@ jobs:
         with:
           task-definition: .aws/task-definition.json
           container-name: ${{ github.event.repository.name }}
-          image: ${{ steps.login-ecr.outputs.registry }}/${{ github.event.repository.name }}:${{ github.sha::7 }}
+          image: ${{ steps.login-ecr.outputs.registry }}/${{ github.event.repository.name }}:${{ github.sha }}
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
