chore: Updated mongo connection to use uri instead of parts

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,7 @@
 #server port
 server.port=8203
 #mongodb
-spring.data.mongodb.host=${DB_HOST:localhost}
-spring.data.mongodb.port=${DB_PORT:27017}
-spring.data.mongodb.database=${DB_NAME:trainee}
-spring.data.mongodb.user=${DB_USER:''}
-spring.data.mongodb.password=${DB_PASSWORD:''}
+spring.data.mongodb.uri=mongodb://${DB_USER:admin}:${DB_PASSWORD:pwd}@${DB_HOST:localhost}:${DB_PORT:27017}/${DB_NAME:trainee}
 #logging
 logging.level.org.springframework.data=debug
 logging.level.root=INFO
