--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
   // Spring Boot
   implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
   implementation "org.springframework.boot:spring-boot-starter-web"
+  implementation "org.springframework.boot:spring-boot-starter-actuator"
   testImplementation "org.springframework.boot:spring-boot-starter-test"
 
   // Lombok
