change ecs cluster name to trainee-preprod

--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -163,5 +163,5 @@ jobs:
         with:
           task-definition: ${{ steps.task-def.outputs.task-definition }}
           service: trainee-details
-          cluster: trainee
+          cluster: trainee-preprod
           wait-for-service-stability: true
