--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -2,8 +2,7 @@ name: CI/CD Workflow
 
 on:
   push:
-  repository_dispatch:
-    types: [run_ci-cd]
+  workflow_dispatch:
 
 jobs:
   assemble:
@@ -123,7 +122,7 @@ jobs:
 
   dockerize:
     name: Dockerize
-    needs: [assemble, analyze]
+    needs: [assemble, test]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master'
 
