feat: Get trainee TIS ID from the token
Currently the trainee's TIS ID is provided as part of the request URL,
as this needs to be locked down to only allow the logged in user to see
their own details the ID should be taken from the authorization token
instead.

TISNEW-3833

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8203
 server.servlet.context-path=/trainee
 #mongodb
-spring.data.mongodb.uri=mongodb://${DB_USER:admin}:${DB_PASSWORD:pwd}@${DB_HOST:localhost}:${DB_PORT:27017}/${DB_NAME:trainee}
+spring.data.mongodb.uri=mongodb://${DB_USER:admin}:${DB_PASSWORD:pwd}@${DB_HOST:localhost}:${DB_PORT:27017}/${DB_NAME:trainee}?authSource=admin
 #logging
 logging.level.org.springframework.data=debug
 logging.level.root=INFO
