--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,9 @@ dependencies {
   // Swagger
   implementation "io.springfox:springfox-swagger2:2.9.2"
   implementation "io.springfox:springfox-swagger-ui:2.9.2"
+
+  // Sentry reporting
+  compile "io.sentry:sentry-spring:1.7.30"
 }
 
 checkstyle {
