--- a/.github/workflows/ci-cd-workflow.yml
+++ b/.github/workflows/ci-cd-workflow.yml
@@ -218,8 +218,8 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }} -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY
 
-  deploy-preprod:
-    name: Deploy to preproduction environment
+  deploy-pre-prod:
+    name: Deploy to pre-production
     needs: dockerize
     environment: preprod
     runs-on: ubuntu-latest
@@ -243,7 +243,7 @@ jobs:
         id: task-def
         uses: aws-actions/amazon-ecs-render-task-definition@v1
         with:
-          task-definition: .aws/task-definition-preprod.json
+          task-definition: .aws/task-definition-pre-prod.json
           container-name: ${{ github.event.repository.name }}
           image: ${{ steps.login-ecr.outputs.registry }}/${{ github.event.repository.name }}:${{ github.sha }}
 
@@ -255,18 +255,9 @@ jobs:
           cluster: trainee-preprod
           wait-for-service-stability: true
 
-      - name: Push stable tag image to Amazon ECR
-        env:
-          ECR_REPOSITORY: ${{ github.event.repository.name }}
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        run: |
-          docker pull $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }}
-          docker tag $ECR_REGISTRY/$ECR_REPOSITORY:${{ github.sha }} $ECR_REGISTRY/$ECR_REPOSITORY:stable
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY
-
   deploy-prod:
-    name: Deploy to production environment
-    needs: deploy-preprod
+    name: Deploy to production
+    needs: deploy-pre-prod
     environment: prod
     runs-on: ubuntu-latest
 
@@ -291,7 +282,7 @@ jobs:
         with:
           task-definition: .aws/task-definition-prod.json
           container-name: ${{ github.event.repository.name }}
-          image: ${{ steps.login-ecr.outputs.registry }}/${{ github.event.repository.name }}:stable
+          image: ${{ steps.login-ecr.outputs.registry }}/${{ github.event.repository.name }}:${{ github.sha }}
 
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
