--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.data.mongodb.uri=mongodb://${DB_USER:admin}:${DB_PASSWORD:pwd}@${DB_HOST:
 logging.level.org.springframework.data=debug
 logging.level.root=INFO
 logging.level.uk.nhs.hee.trainee.details=TRACE
+
+sentry.dsn=${SENTRY_DSN:}
+sentry.environment=${SENTRY_ENVIRONMENT:local}
