--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,6 @@ application:
   aws:
     sqs:
       event: ${EVENT_QUEUE_URL:}
+
+mongock:
+  migration-scan-package: uk.nhs.hee.trainee.details.migration
