chore: upgrade gradle wrapper to 7.4.2
Remove fixed checkstyle plugin version as Gradle now uses a compatible
version.
Change the deprecated `jacocoTestReport` properties to their new
replacements.

TIS21-SHED

--- a/build.gradle
+++ b/build.gradle
@@ -62,14 +62,13 @@ dependencies {
 }
 
 checkstyle {
-  toolVersion = "8.26"
   config = resources.text.fromArchiveEntry(configurations.checkstyle[0], "google_checks.xml")
 }
 
 jacocoTestReport {
   reports {
-    html.enabled true
-    xml.enabled true
+    html.required = true
+    xml.required = true
   }
 }
 
