chore: fix referenced workflow name
TIS21-3497
TIS21-3848

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   ci-cd:
     name: Build and deploy
-    uses: health-education-england/.github/.github/workflows/ci-cd.yml@main
+    uses: health-education-england/.github/.github/workflows/ci-cd-gradle.yml@main
     secrets:
       ecr-username: ${{ secrets.AWS_ACCESS_KEY_ID }}
       ecr-password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
