chore: add cluster-prefix to ci-cd workflow
TIS21-3497
TIS21-3848

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,6 +9,8 @@ jobs:
   ci-cd:
     name: Build and deploy
     uses: health-education-england/.github/.github/workflows/ci-cd-gradle.yml@main
+    with:
+      cluster-prefix: trainee
     secrets:
       ecr-username: ${{ secrets.AWS_ACCESS_KEY_ID }}
       ecr-password: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
