feat: add event handlers for PersonDetails changes
Create SQS listeners for the following events:
 - Basic detail updates
 - Contact details updates
 - GDC details updates
 - GMC details updates
 - Personal info updates
 - Person Owner updates

TIS21-4076
TIS21-4086

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,6 +32,12 @@ application:
   aws:
     sqs:
       event: ${EVENT_QUEUE_URL:}
+      basic-details-update: ${BASIC_DETAILS_UPDATE_QUEUE_URL:}
+      contact-details-update: ${CONTACT_DETAILS_UPDATE_QUEUE_URL:}
+      gdc-details-update: ${GDC_DETAILS_UPDATE_QUEUE_URL:}
+      gmc-details-update: ${GMC_DETAILS_UPDATE_QUEUE_URL:}
+      personal-info-update: ${PERSONAL_INFO_UPDATE_QUEUE_URL:}
+      person-owner-update: ${PERSON_OWNER_UPDATE_QUEUE_URL:}
   environment: ${ENVIRONMENT:local}
   rabbit:
     coj-signed:
