chore: upgrade Spring Boot to 3.2.x
Update Spring Boot to 3.2.1, the following are required to support
migration:
 - Mongock driver v3 replacing with v4
 - Removed `javax` imports replaced with `jakarta` imports
 - AWS Spring Cloud requires version 3.x.x

Update the AWS SQS config to use the new SQS starter from version
`3.x.x`, instead of the old generic messaging starter.
The new version has better auto-configuration, so the existing SQS
configuration can be deleted.
The `@SqsListener` annotation no longer has a deletion policy, the
default matches the old value so no further configuration is needed.

TIS21-SHED

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,15 +4,19 @@ server:
     context-path: /trainee
 
 spring:
+  cloud:
+    aws:
+      endpoint: ${AWS_ENDPOINT:}
   data:
     mongodb:
       uri: mongodb://${DB_USER:admin}:${DB_PASSWORD:pwd}@${DB_HOST:localhost}:${DB_PORT:27017}/${DB_NAME:trainee}?authSource=admin
-  redis:
-    host: ${REDIS_HOST:localhost}
-    port: ${REDIS_PORT:6379}
-    ssl: ${REDIS_SSL:false}
-    user: ${REDIS_USER:default}
-    password: ${REDIS_PASSWORD:password}
+    redis:
+      host: ${REDIS_HOST:localhost}
+      port: ${REDIS_PORT:6379}
+      ssl:
+        enabled: ${REDIS_SSL:false}
+      user: ${REDIS_USER:default}
+      password: ${REDIS_PASSWORD:password}
   rabbitmq:
     host: ${TRAINEE_DETAILS_RABBITMQ_HOST}
     port: ${TRAINEE_DETAILS_RABBITMQ_PORT}
