feat: update-email endpoint
TIS21-8169

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,6 +33,7 @@ application:
     sns:
       coj-signed: ${TOPIC_ARN_COJ_SIGNED}
       gmc-details-provided: ${TOPIC_ARN_GMC_DETAILS_PROVIDED}
+      email-details-provided: ${TOPIC_ARN_EMAIL_DETAILS_PROVIDED}
     sqs:
       event: ${EVENT_QUEUE_URL:}
       basic-details-update: ${BASIC_DETAILS_UPDATE_QUEUE_URL:}
