--- a/src/integrationTest/resources/application-test.yml
+++ b/src/integrationTest/resources/application-test.yml
@@ -2,6 +2,7 @@ application:
   aws:
     sns:
       coj-signed: dummy
+      email-details-provided: dummy
       gmc-details-provided: dummy
     sqs:
       event: dummy
